syntax = "proto3";

package ai.metathings.service.sensor;
option go_package = "sensor";

import "get.proto";
import "list.proto";
import "patch.proto";
import "get_data.proto";
import "list_data.proto";

service SensorService {
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	rpc Patch(PatchRequest) returns (PatchResponse) {}
	rpc GetData(GetDataRequest) returns (GetDataResponse) {}
	rpc ListData(ListDataRequest) returns (ListDataResponse) {}
}
